upload hawaii photos

--- a/photography.html
+++ b/photography.html
@@ -61,7 +61,7 @@
                     <li id="tab1"><a href="">friends</a></li>
                     <li id="tab2"><a href="">new york</a></li>
                     <li id="tab3"><a href="">los angeles</a></li>
-                    <li class="uk-disabled"><a>coming soon...</a></li>
+                    <li id="tab4"><a href="">hawaii</a></li>
                 </ul>
 
                 <!-- tab content -->
@@ -278,6 +278,110 @@
                                 <div>
                                     <img data-src="./src/images/photography-page/photos/la/2021-5-littletokyo.jpg"
                                         width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+
+                    <li>
+                        <!-- hawaii -->
+                        <div class="uk-container uk-margin-large-top" id="hawaii">
+                            <div class="uk-grid-small uk-child-width-1-3@m" uk-grid="masonry:true">
+                                <div>
+                                    <img data-src="./src/images/photography-page/photos/hawaii/hawaii1.jpg" width="400"
+                                        height="300" alt="" uk-img="target: .uk-grid-small" />
+                                </div>
+                                <div>
+                                    <img data-src="./src/images/photography-page/photos/hawaii/hawaii2.jpg" width="400"
+                                        height="300" alt="" uk-img="target: .uk-grid-small" />
+                                </div>
+                                <div>
+                                    <img data-src="./src/images/photography-page/photos/hawaii/hawaii3.jpg" width="400"
+                                        height="300" alt="" uk-img="target: .uk-grid-small" />
+                                </div>
+                                <div>
+                                    <img data-src="./src/images/photography-page/photos/hawaii/hawaii4.jpg" width="400"
+                                        height="300" alt="" uk-img="target: .uk-grid-small" />
+                                </div>
+                                <div>
+                                    <img data-src="./src/images/photography-page/photos/hawaii/hawaii5.jpg" width="400"
+                                        height="300" alt="" uk-img="target: .uk-grid-small" />
+                                </div>
+                                <div>
+                                    <img data-src="./src/images/photography-page/photos/hawaii/hawaii6.jpg" width="400"
+                                        height="300" alt="" uk-img="target: .uk-grid-small" />
+                                </div>
+                                <div>
+                                    <img data-src="./src/images/photography-page/photos/hawaii/hawaii7.jpg" width="400"
+                                        height="300" alt="" uk-img="target: .uk-grid-small" />
+                                </div>
+                                <div>
+                                    <img data-src="./src/images/photography-page/photos/hawaii/hawaii8.jpg" width="400"
+                                        height="300" alt="" uk-img="target: .uk-grid-small" />
+                                </div>
+                                <div>
+                                    <img data-src="./src/images/photography-page/photos/hawaii/hawaii9.jpg" width="400"
+                                        height="300" alt="" uk-img="target: .uk-grid-small" />
+                                </div>
+                                <div>
+                                    <img data-src="./src/images/photography-page/photos/hawaii/hawaii10.jpg" width="400"
+                                        height="300" alt="" uk-img="target: .uk-grid-small" />
+                                </div>
+                                <div>
+                                    <img data-src="./src/images/photography-page/photos/hawaii/hawaii11.jpg" width="400"
+                                        height="300" alt="" uk-img="target: .uk-grid-small" />
+                                </div>
+                                <div>
+                                    <img data-src="./src/images/photography-page/photos/hawaii/hawaii12.jpg" width="400"
+                                        height="300" alt="" uk-img="target: .uk-grid-small" />
+                                </div>
+                                <div>
+                                    <img data-src="./src/images/photography-page/photos/hawaii/hawaii13.jpg" width="400"
+                                        height="300" alt="" uk-img="target: .uk-grid-small" />
+                                </div>
+                                <div>
+                                    <img data-src="./src/images/photography-page/photos/hawaii/hawaii14.jpg" width="400"
+                                        height="300" alt="" uk-img="target: .uk-grid-small" />
+                                </div>
+                                <div>
+                                    <img data-src="./src/images/photography-page/photos/hawaii/hawaii15.jpg" width="400"
+                                        height="300" alt="" uk-img="target: .uk-grid-small" />
+                                </div>
+                                <div>
+                                    <img data-src="./src/images/photography-page/photos/hawaii/hawaii16.jpg" width="400"
+                                        height="300" alt="" uk-img="target: .uk-grid-small" />
+                                </div>
+                                <div>
+                                    <img data-src="./src/images/photography-page/photos/hawaii/hawaii17.jpg" width="400"
+                                        height="300" alt="" uk-img="target: .uk-grid-small" />
+                                </div>
+                                <div>
+                                    <img data-src="./src/images/photography-page/photos/hawaii/hawaii18.jpg" width="400"
+                                        height="300" alt="" uk-img="target: .uk-grid-small" />
+                                </div>
+                                <div>
+                                    <img data-src="./src/images/photography-page/photos/hawaii/hawaii19.jpg" width="400"
+                                        height="300" alt="" uk-img="target: .uk-grid-small" />
+                                </div>
+                                <div>
+                                    <img data-src="./src/images/photography-page/photos/hawaii/hawaii20.jpg" width="400"
+                                        height="300" alt="" uk-img="target: .uk-grid-small" />
+                                </div>
+                                <div>
+                                    <img data-src="./src/images/photography-page/photos/hawaii/hawaii21.jpg" width="400"
+                                        height="300" alt="" uk-img="target: .uk-grid-small" />
+                                </div>
+                                <div>
+                                    <img data-src="./src/images/photography-page/photos/hawaii/hawaii22.jpg" width="400"
+                                        height="300" alt="" uk-img="target: .uk-grid-small" />
+                                </div>
+                                <div>
+                                    <img data-src="./src/images/photography-page/photos/hawaii/hawaii23.jpg" width="400"
+                                        height="300" alt="" uk-img="target: .uk-grid-small" />
+                                </div>
+                                <div>
+                                    <img data-src="./src/images/photography-page/photos/hawaii/hawaii24.jpg" width="400"
+                                        height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                             </div>
                         </div>
