--- a/projects.html
+++ b/projects.html
@@ -55,16 +55,19 @@
                     <div>
                         <div class="uk-card uk-card-secondary uk-card-hover uk-card-body pointer">
                             <h3 class="uk-card-title">&#x1F489; NY COVID Data</h3>
-                            <p>I made this COVID tracker specifically for the use of students in New York in the fall of 2020 due to the mandatory 2-week quarantine.</p>
-                            <a href="#" class="uk-button uk-button-text" uk-toggle="target: #covid-tracker">Read more</a>
+                            <p>I made this COVID tracker specifically for the use of students in New York in the fall of
+                                2020 due to the mandatory 2-week quarantine.</p>
+                            <a href="#" class="uk-button uk-button-text" uk-toggle="target: #covid-tracker">Read
+                                more</a>
                         </div>
                     </div>
 
                     <!-- Boba Tracker -->
                     <div>
                         <div class="uk-card uk-card-secondary uk-card-hover uk-card-body pointer">
-                            <h3 class="uk-card-title">&#x1F9C3;	Boba Tracker</h3>
-                            <p>I made a Boba Tracker to discourage myself from getting boba by always displaying how much I've spent on it this year.</p>
+                            <h3 class="uk-card-title">&#x1F9C3; Boba Tracker</h3>
+                            <p>I made a Boba Tracker to discourage myself from getting boba by always displaying how
+                                much I've spent on it this year.</p>
                             <a href="#" class="uk-button uk-button-text" uk-toggle="target: #boba-tracker">Read more</a>
                         </div>
                     </div>
@@ -81,7 +84,8 @@
             </div>
 
             <div class="uk-container uk-secondary uk-width-1-3 uk-margin-xlarge-top">
-                <a href="https://github.com/zhaojustin" class="uk-display-block uk-card uk-card-body uk-card-hover uk-card-primary uk-link-toggle">
+                <a href="https://github.com/zhaojustin"
+                    class="uk-display-block uk-card uk-card-body uk-card-hover uk-card-primary uk-link-toggle">
                     <h3 class="uk-card-title"><span uk-icon="github"></span> Github</h3>
                     <p>You can find all my projects on my Github page!</p>
                 </a>
@@ -120,8 +124,11 @@
             <!-- body -->
             <div class="uk-flex-middle uk-margin-large-top" uk-grid>
                 <div class="uk-width-1-2@m">
-                    <p>My new year's resolution for 2021 was to drink less boba, since I had spent so much money on it in 2020. And also it's not good for my health.</p>
-                    <p>Therefore, I decided to make this webapp to track each time I drink it, and show statistics like how much money I've spent on it and when I last had it in order to discourage myself from getting boba too much.</p>
+                    <p>My new year's resolution for 2021 was to drink less boba, since I had spent so much money on it
+                        in 2020. And also it's not good for my health.</p>
+                    <p>Therefore, I decided to make this webapp to track each time I drink it, and show statistics like
+                        how much money I've spent on it and when I last had it in order to discourage myself from
+                        getting boba too much.</p>
                 </div>
                 <div class="uk-width-1-2@m uk-flex-first">
                     <img class="uk-box-shadow-large" src="./src/images/project-page/boba-tracker/spreadsheet.png"
@@ -132,8 +139,10 @@
                 <div class="uk-width-1-2@m uk-flex-first">
                     <p>I mainly made this webapp in order to learn new javascript and front-end development frameworks.
                     </p>
-                    <p>For this project, I learned how to use Pug and Svelte. I also learned how to connect a basic database such as Google Sheets to the
-                        front end UI. The spreadsheet holds all the information about the different drinks that I consume throughout
+                    <p>For this project, I learned how to use Pug and Svelte. I also learned how to connect a basic
+                        database such as Google Sheets to the
+                        front end UI. The spreadsheet holds all the information about the different drinks that I
+                        consume throughout
                         the year.</p>
                 </div>
                 <div class="uk-width-1-2@m uk-visible@m">
@@ -153,8 +162,10 @@
             <!-- body -->
             <div class="uk-flex-middle uk-margin-large-top" uk-grid>
                 <div class="uk-width-1-2@m uk-flex-first">
-                    <p>During Fall 2020, New York covid guidelines required that travelers from "hotspot" states had to quarantine for 2 weeks.
-                        However, these "hotspot" states changed every week, and the criteria for being a "hotspot" state was confusing.
+                    <p>During Fall 2020, New York covid guidelines required that travelers from "hotspot" states had to
+                        quarantine for 2 weeks.
+                        However, these "hotspot" states changed every week, and the criteria for being a "hotspot" state
+                        was confusing.
                     </p>
                 </div>
                 <div class="uk-width-1-2@m uk-visible@m">
@@ -164,9 +175,12 @@
             </div>
             <div class="uk-flex-middle uk-margin-large-top" uk-grid>
                 <div class="uk-width-1-2@m">
-                    <p>I took data from the <a href="https://covidtracking.com/">COVID Tracking Project</a> and was able to make a 
-                        table that showed which states were "hotspot" states, and which ones were close to being so. This helped
-                        students in New York make the decision about whether or not it was worth to go home if they had to quarantine when they came back.
+                    <p>I took data from the <a href="https://covidtracking.com/">COVID Tracking Project</a> and was able
+                        to make a
+                        table that showed which states were "hotspot" states, and which ones were close to being so.
+                        This helped
+                        students in New York make the decision about whether or not it was worth to go home if they had
+                        to quarantine when they came back.
                     </p>
                 </div>
                 <div class="uk-width-1-2@m uk-flex-first">
