--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="dist/css/uikit.min.css" />
     <link rel="stylesheet" href="src/css/styles.css" />
-    <script src="dist/js/uikit.min.js"></script>
+    <script src="dist/js/uikit.min.js" async></script>
     <script src="dist/js/uikit-icons.min.js"></script>
 
     <script src="dist/js/swupSlideTheme.min.js"></script>
