--- a/misc.html
+++ b/misc.html
@@ -5,6 +5,10 @@
     <title>Misc. - Justin Zhao</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Justin Zhao Personal Site">
+    <meta name="keywords" content="Justin, Zhao">
+    <meta name="author" content="Justin Zhao">
+
     <link rel="stylesheet" href="dist/css/uikit.min.css" />
     <link rel="stylesheet" href="src/css/styles.css" />
     <script src="dist/js/uikit.min.js"></script>
