added pictures to photos page

--- a/photography.html
+++ b/photography.html
@@ -64,7 +64,7 @@
                 <ul class="uk-tab uk-margin-left" id="js-control" data-uk-tab="{connect:'#photo-albums'}">
                     <li id="tab1"><a href="">friends</a></li>
                     <li id="tab2"><a href="">new york</a></li>
-                    <li id="tab3"><a href="">los angeles</a></li>
+                    <li id="tab3"><a href="">california</a></li>
                     <li id="tab4"><a href="">hawaii</a></li>
                 </ul>
 
@@ -268,19 +268,56 @@
                     </li>
 
                     <li>
-                        <!-- la -->
-                        <div class="uk-container uk-margin-large-top" id="losangeles">
+                        <!-- cali -->
+                        <div class="uk-container uk-margin-large-top" id="cali">
                             <div class="uk-grid-small uk-child-width-1-3@m" uk-grid="masonry:true">
                                 <div>
-                                    <img data-src="./src/images/photography-page/photos/la/2021-5-la.jpg" width="400"
+                                    <img data-src="./src/images/photography-page/photos/cali/2021-5-la.jpg" width="400"
                                         height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
-                                    <img data-src="./src/images/photography-page/photos/la/2020-12-thesource.jpg"
+                                    <img data-src="./src/images/photography-page/photos/cali/2021-5-littletokyo.jpg"
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
+                                </div>
+
+                                <div>
+                                    <img data-src="./src/images/photography-page/photos/cali/2021-8-sanfran1.jpg"
                                         width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                                 <div>
-                                    <img data-src="./src/images/photography-page/photos/la/2021-5-littletokyo.jpg"
+                                    <img data-src="./src/images/photography-page/photos/cali/2021-8-sanfran2.jpg"
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
+                                </div>
+                                <div>
+                                    <img data-src="./src/images/photography-page/photos/cali/2021-8-sanfran7.jpg"
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
+                                </div>
+                                <div>
+                                    <img data-src="./src/images/photography-page/photos/cali/2021-8-sanfran5.jpg"
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
+                                </div>
+                                <div>
+                                    <img data-src="./src/images/photography-page/photos/cali/2021-8-sanfran6.jpg"
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
+                                </div>
+                                <div>
+                                    <img data-src="./src/images/photography-page/photos/cali/2021-8-sanfran8.jpg"
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
+                                </div>
+                                <div>
+                                    <img data-src="./src/images/photography-page/photos/cali/2021-8-sanfran9.jpg"
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
+                                </div>
+                                <div>
+                                    <img data-src="./src/images/photography-page/photos/cali/2020-3-griffitharch.jpeg"
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
+                                </div>
+                                <div>
+                                    <img data-src="./src/images/photography-page/photos/cali/2020-3-lasmog.jpeg"
+                                        width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
+                                </div>
+                                <div>
+                                    <img data-src="./src/images/photography-page/photos/cali/2020-12-thesource.jpg"
                                         width="400" height="300" alt="" uk-img="target: .uk-grid-small" />
                                 </div>
                             </div>
