--- a/projects.html
+++ b/projects.html
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" href="dist/css/uikit.min.css" />
     <link rel="stylesheet" href="src/css/styles.css" />
+    <link rel="stylesheet" href="src/css/modal.css" />
     <script src="dist/js/uikit.min.js" async></script>
     <script src="dist/js/uikit-icons.min.js"></script>
 
@@ -194,7 +195,6 @@
             </div>
         </div>
     </div>
-
 
     </div>
 </body>
